@@ -20,6 +20,10 @@ if(NOT MSVC)
 		set(CMAKE_C_EXTENSIONS ON)
 	endif()
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-missing-field-initializers")
+	if(WIN32)
+		# mingw32 likes to complain about using the "wrong" format strings despite them actually working
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
+	endif()
 else()
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CRT_SECURE_NO_WARNINGS /wd4003 /wd4244 /wd4146")
 endif()
