@@ -29,6 +29,7 @@ Emulation fixes:
 Other fixes:
  - All: Improve export headers (fixes mgba.io/i/1738)
  - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
+ - All: Correct more format strings on Windows (fixes mgba.io/i/1817)
  - Core: Ensure ELF regions can be written before trying
  - Debugger: Don't skip undefined instructions when debugger attached
  - FFmpeg: Fix some small memory leaks
